--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "local-storage": "^2.0.0",
     "react": "^17.0.2",
     "react-canvas-draw": "^1.1.1",
     "react-color": "^2.19.3",
@@ -21,6 +22,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "redux": "^4.1.0",
     "sass": "^1.34.0",
     "uuid": "^8.3.2",
